# sol-tx-explorer

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: AnimatedCounter.tsx  ExplorerLink.tsx  GlassCard.tsx  GradientButton.tsx  MetricsCard.tsx  NetworkBadge.tsx  PageTransition.tsx  Sidebar.tsx  SolanaProvider.tsx  Terminal.tsx  ThemeToggle.tsx  TxStatus.tsx
app/src/contexts/: LogContext.tsx  NavigationContext.tsx  ThemeContext.tsx
app/src/hooks/: useSolanaBalance.ts  useTransactionHistory.ts
app/src/pages/: BundleSim.tsx  Dashboard.tsx  SwapPage.tsx  TxBuilder.tsx  VaultManager.tsx
app/src/services/: jito.ts  jupiter.ts  vault.ts
programs/tx-vault/: Cargo.toml
programs/tx-vault/src/: lib.rs
scripts/: jito-bundle.ts  jupiter-swap.ts  optimized-tx.ts  send-tx.ts  setup-wallet.ts
scripts/utils/: connection.ts  wallet.ts
tests/: tx-vault.ts
