[workspace]
members = [
    "programs/tx-vault"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin blake3 to avoid edition2024 requirement on BPF toolchain
[workspace.dependencies]
blake3 = "=1.5.5"
