[package]
name = "tx-vault"
version = "0.1.0"
description = "Solana on-chain vault program for transaction orchestration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tx_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
